--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-    "name": "screeps-bot-screeps-nooby-typescript-code",
-    "version": "0.0.1",
-    "description": "A screeps AI for noobs running typescript",
-    "license": "MIT",
-    "keywords": [
-      "screeps",
-      "game-ai"
-    ],
-    "author": "rfsjim",
-    "bugs": {
-      "url": "https://github.com/rfsjim/Screeps-Nooby-Typescript-Code/issues"
-    },
-    "homepage": "https://github.com/rfsjim/Screeps-Nooby-Typescript-Code",
-    "repository": {
-      "type": "git",
-      "url": "https://github.com/rfsjim/Screeps-Nooby-Typescript-Code.git"
-    },
-    "type": "commonjs",
-    "main": "src/main.js",
-    "screeps_bot": true,
-  }
-  
+  "name": "screeps-bot-screeps-nooby-typescript-code",
+  "version": "0.0.1",
+  "description": "A screeps AI for noobs running typescript",
+  "license": "MIT",
+  "keywords": [
+    "screeps",
+    "game-ai"
+  ],
+  "author": "rfsjim",
+  "bugs": {
+    "url": "https://github.com/rfsjim/Screeps-Nooby-Typescript-Code/issues"
+  },
+  "homepage": "https://github.com/rfsjim/Screeps-Nooby-Typescript-Code",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rfsjim/Screeps-Nooby-Typescript-Code.git"
+  },
+  "type": "commonjs",
+  "main": "src/main.js",
+  "screeps_bot": true,
+  "dependencies": {
+    "@types/screeps": "^3.3.0",
+    "typescript": "^3.8.3"
+  },
+  "devDependencies": {}
+}
