--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
   "main": "src/main.js",
   "screeps_bot": true,
   "dependencies": {
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/screeps": "^3.3.0",
     "lodash": "^4.17.21",
     "rollup": "^3.17.1",
+    "rollup-plugin-clear": "^2.0.7",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-screeps": "^1.0.1",
+    "rollup-plugin-typescript2": "^0.34.1",
     "typescript": "^4.9.5"
   },
   "devDependencies": {}
