--- a/package.json
+++ b/package.json
@@ -1,73 +1,40 @@
 {
-  "name": "screeps-bot-screeps-nooby-typescript-code",
-  "version": "0.0.1",
-  "description": "A screeps AI for noobs running typescript",
-  "license": "MIT",
-  "type": "module",
-  "keywords": [
-    "screeps",
-    "game-ai"
-  ],
-  "author": "rfsjim",
+  "name": "screeps-typescript",
+  "version": "1.0.0",
+  "description": "An adventure into Typescript using *Screeps: World* an open source MMO RTS sandbox game",
+  "main": "eslint.config.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup -c",
+    "watch": "rollup -c -w",
+    "lint": "eslint src --ext .ts",
+    "clean": "rm -rf dist",
+    "start": "npm run clean && npm run build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rfsjim/Screeps-Nooby-Typescript-Code.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/rfsjim/Screeps-Nooby-Typescript-Code/issues"
   },
-  "homepage": "https://github.com/rfsjim/Screeps-Nooby-Typescript-Code",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/rfsjim/Screeps-Nooby-Typescript-Code.git"
-  },
-  "main": "src/main.js",
-  "scripts": {
-    "lint": "eslint \"src/**/*.ts\"",
-    "build": "rollup -c",
-    "push-main": "rollup -c --environment DEST:main",
-    "push-pserver": "rollup -c --environment DEST:pserver",
-    "push-season": "rollup -c --environment DEST:season",
-    "push-sim": "rollup -c --environment DEST:sim",
-    "test": "npm run test-unit",
-    "test-unit": "mocha test/unit/**/*.ts",
-    "test-integration": "echo 'See docs/in-depth/testing.md for instructions on enabling integration tests'",
-    "watch-main": "rollup -cw --environment DEST:main",
-    "watch-pserver": "rollup -cw --environment DEST:pserver",
-    "watch-season": "rollup -cw --environment DEST:season",
-    "watch-sim": "rollup -cw --environment DEST:sim"
-  },
-  "screeps_bot": true,
+  "homepage": "https://github.com/rfsjim/Screeps-Nooby-Typescript-Code#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^24.1.0",
-    "@rollup/plugin-node-resolve": "^15.0.2",
-    "@types/chai": "^4.3.4",
-    "@types/lodash": "^4.14.194",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^18.16.1",
-    "@types/screeps": "^3.3.2",
-    "@types/sinon": "^10.0.14",
-    "@types/sinon-chai": "^3.2.9",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
-    "@typescript-eslint/typescript-estree": "^5.59.1",
-    "chai": "^4.3.7",
-    "eslint": "^8.39.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "lodash": "^4.17.21",
-    "mocha": "^10.2.0",
-    "prettier": "^2.8.8",
-    "rollup": "^3.17.1",
-    "rollup-plugin-clear": "^2.0.7",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-screeps": "^1.0.1",
-    "rollup-plugin-typescript2": "^0.34.1",
-    "sinon": "^15.0.4",
-    "sinon-chai": "^3.7.0",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^4.9.5"
+    "@rollup/plugin-typescript": "^12.1.4",
+    "@types/lodash": "^4.17.20",
+    "@types/screeps": "^3.3.8",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "eslint": "^9.32.0",
+    "rollup": "^4.45.3",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
-    "source-map": "^0.6.1"
+    "lodash": "^4.17.21",
+    "tslib": "^2.8.1"
   }
 }
