--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "esnext",
+    "module": "ESNext",
     "lib": ["es2018"],
     "target": "es2018",
     "moduleResolution": "Node",
@@ -8,13 +8,19 @@
     "baseUrl": "src/",
     "sourceMap": true,
     "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "types": ["screeps"],
     "experimentalDecorators": true,
     "noImplicitReturns": true,
     "allowSyntheticDefaultImports": true,
-    "allowUnreachableCode": false
+    "allowUnreachableCode": false,
+    "resolveJsonModule": true
   },
+  "include": ["src"],
   "exclude": [
     "node_modules",
-    "src_backup"
+    "src_backup",
+    "dist"
   ]
 }
